Wed Dec 11 14:04:23 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: version 2.1.4, interface age 1.
	
	* configure.in: Require GLib-2.1.4, so we will catch
	the need for the new AM_GLIB_DEFINE_LOCALEDIR() in
	an obvious way.

	* configure.in gtk/Makefile.am: Use AM_GLIB_DEFINE_LOCALEDIR()

Tue Dec 10 15:46:01 PST 2002  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkwindow-x11.c (set_initial_hints): 
	gdk_x11_get_xatom_by_name_for_display takes a GdkDisplay *,
	not an XDisplay * (obvious typo fix for the previous commit)

2002-12-11  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkwindow-x11.c (set_initial_hints): Delete EWMH
	properties if no private->state flags are set.  (#66754)

2002-12-10  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwidget.c (gtk_widget_class_find_style_property): 
	* gtk/gtkcontainer.c (gtk_container_class_find_child_property):
	Doc typo fixes.

	* gtk/tree_plus.xpm: 
	* gtk/tree_plus.xbm: 
	* gtk/tree_minus.xpm: 
	* gtk/tree_minus.xbm: 
	* gtk/line-wrap.xbm: 
	* gtk/line-arrow.xbm: 
	* gtk/gtktextview.c: 
	* gtk/gtktextutil.c: 
	* gtk/gtkstyle.c: 
	* gtk/gtkstock.c: 
	* gtk/gtksizegroup.c: 
	* gtk/gtkselection.c: 
	* gtk/gtkoptionmenu.c: 
	* gtk/gtklist.c: 
	* gtk/gtkfilesel.c: 
	* gtk/gtkentry.c: 
	* gtk/gtkcolorsel.c: 
	* gtk/gtkclist.c: 
	* gtk/gtkclipboard.c: 
	* gtk/gtkbutton.c: Data constness fixes.  (#75754)

Tue Dec 10 14:37:41 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate)
	  gdk/x11/gdkwindow-x11.h: Separate out tracking of the X server
	  focus window from tracking our idea of what the focus window is,
	  because the PointerRoot code needs to know the real pointer
	  window. (Mostly accidentally committed a bit earlier.)

Tue Dec 10 12:57:00 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclist.c (adjust_adjustments): Fix typo with
	hadjustment/vadjustment introduce prior to 2.0.0.
	(#84621, Charles Kerr)

Tue Dec 10 12:40:30 2002  Soeren Sandmann  <sandmann@daimi.au.dk>
